--- a/index/index/style.css
+++ b/index/index/style.css
@@ -35,6 +35,43 @@ body, html {
   margin: 0 30px;
 }
 
-.animations, .vins {
+.phusis:hover, .subsite:hover {
     background: #B2D1B2;
+}
+
+.phusis div.link_wrapper {
+  display: table;
+  width: 100%;
+  height: 95%;
+}
+
+.phusis p {
+  margin: 0;
+  border-right: 1px dotted #999;
+  height: 100%;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+.subsite .link_wrapper {
+  width: 95%;
+  height: 100%;
+  display: table;
+  margin: 0 auto;
+}
+
+.subsite p {
+  margin: 0;
+  border-bottom: 1px dotted #999;
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.vins p {
+  border-bottom: none;
+}
+
+.subsite_cygne {
+  margin: 0 10px;
 }
